--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,21 +1,37 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
-  </ion-toolbar>
+<ion-header>
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong class="capitalize">{{ folder }}</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content [fullscreen]="true">
+    <ion-grid class="ion-align-self-center">
+        <ion-header collapse="condense">
+            <ion-toolbar>
+                <ion-title size="large">{{ folder }}</ion-title>
+            </ion-toolbar>
+        </ion-header>
+        <h2 class="ion-text-center">Login</h2>
+        <ion-item>
+            <ion-label for="username"></ion-label>
+            <ion-input placeholder="Nombre de usuario"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label for="password"></ion-label>
+            <ion-input placeholder="Contraseña"></ion-input>
+        </ion-item>
+    </ion-grid>
+
+    <ion-grid>
+        <ion-row class="ion-align-items-center">
+            <ion-col class="ion-text-center">
+                <ion-button routerLink="/user-list" color="secondary"> Login </ion-button>
+            </ion-col>
+            <ion-col class="ion-text-center">
+                <ion-button routerLink="/register" user-list color="tertiary">Register</ion-button>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+    <img src="../../assets/icono.png" class="ion-text-center">
+
 </ion-content>
