--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -27,4 +27,14 @@
     <ion-item>
         <ion-input [(ngModel)]="this.data.email" placeholder="Email" disabled inputmode="email"></ion-input>
     </ion-item>
+    <ion-grid>
+        <ion-row color="primary" justify-content-center>
+            <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+                <ion-input type="file" (change)="onFileChanged($event)" #fileInput></ion-input>
+                <ion-button color="tertiary" (click)="onUpload()">Upload!</ion-button>
+                <!-- <ion-progress-bar color="secondary" value="0.5"></ion-progress-bar>-->
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
 </ion-content>
