--- a/src/app/pages/pruebas/pruebas.page.html
+++ b/src/app/pages/pruebas/pruebas.page.html
@@ -1,20 +1,20 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="music">
-            <ion-label>Music</ion-label>
-            <ion-icon name="musical-note"></ion-icon>
+        <ion-tab-button tab="user-list">
+            <ion-label>Usuarios</ion-label>
+            <ion-icon name="people-outline"></ion-icon>
         </ion-tab-button>
-        <ion-tab-button tab="movies">
-            <ion-label>Movies</ion-label>
-            <ion-icon name="videocam"></ion-icon>
+        <ion-tab-button tab="company">
+            <ion-label>Empresas</ion-label>
+            <ion-icon name="business-outline"></ion-icon>
         </ion-tab-button>
-        <ion-tab-button tab="games">
-            <ion-label>Games</ion-label>
-            <ion-icon name="game-controller"></ion-icon>
+        <ion-tab-button tab="payments">
+            <ion-label>Pagos</ion-label>
+            <ion-icon name="card-outline"></ion-icon>
         </ion-tab-button>
-        <ion-tab-button tab="games">
-            <ion-label>Games</ion-label>
-            <ion-icon name="game-controller"></ion-icon>
+        <ion-tab-button tab="services">
+            <ion-label>Servicios</ion-label>
+            <ion-icon name="easel-outline"></ion-icon>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
