--- a/src/app/pages/company/company.page.html
+++ b/src/app/pages/company/company.page.html
@@ -9,34 +9,40 @@
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="primary">
-            <ion-button color="dark">
+            <ion-button color="dark" [routerLink]="[ '/login']">
                 <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
             </ion-button>
         </ion-buttons>
-        <ion-title>Usuarios</ion-title>
+        <ion-title>Empresas</ion-title>
     </ion-toolbar>
 </ion-header>
 
 
 
 
-<ion-content class="ion-padding">
+<ion-content fullscreen>
     <ion-grid>
         <ion-row>
-            <ion-col>ID</ion-col>
-            <ion-col>nombre</ion-col>
-            <ion-col>acciones</ion-col>
-        </ion-row>
-    </ion-grid>
-    <ion-grid>
-        <ion-row *ngFor="let company of companies">
-            <ion-col style="font-size:10px;">{{ company.id_company }} </ion-col>
-            <ion-col style="font-size:10px;">
-                <ion-row>
-                    <ion-col style="font-size:10px;"> {{ company.company }}</ion-col>
-                </ion-row>
+            <ion-col size="2">
+                <div>Id</div>
             </ion-col>
-            <ion-col style="display: flex">
+            <ion-col>
+                <div>Nombre</div>
+            </ion-col>
+            <ion-col>
+                <div>Acciones</div>
+            </ion-col>
+        </ion-row>
+        <ion-row *ngFor="let company of companies">
+            <ion-col size="2">
+                <div style='font-size:90%'>{{ company.id_company }} </div>
+            </ion-col>
+            <ion-col>
+                <div> {{ company.company }}
+                    <div style='font-size:60%'>{{ company.rfc }}</div>
+                </div>
+            </ion-col>
+            <ion-col size="5">
                 <ion-button color="warning" size="small" routerLink='/company-update/{{company.id_company}}'>
                     <ion-icon name="create"></ion-icon>
                 </ion-button>
@@ -46,7 +52,9 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-    <ion-button color="tertiary" [routerLink]="['/company-create']">
-        Agregar Empresa
-    </ion-button>
+    <ion-fab horizontal="start" vertical="bottom" slot="fixed">
+        <ion-fab-button color="success">
+            <ion-icon name="add" color="dark"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
