--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -1,3 +1,7 @@
+<ion-header>
+    <ion-toolbar>
+    </ion-toolbar>
+</ion-header>
 <ion-content class="ion-padding" padding>
     <form #form="ngForm" (ngSubmit)="login()">
         <ion-grid>
