--- a/src/app/pages/company/update/update.page.html
+++ b/src/app/pages/company/update/update.page.html
@@ -1,7 +1,5 @@
-<!-- student-edit.page.html -->
 <ion-header>
-    <ion-toolbar color="tertiary">
-        <ion-title>Editar Empresa</ion-title>
+    <ion-toolbar>
     </ion-toolbar>
 </ion-header>
 
