--- a/src/app/user-list/user-update/user-update.component.html
+++ b/src/app/user-list/user-update/user-update.component.html
@@ -1,7 +1,6 @@
 <!-- student-edit.page.html -->
 <ion-header>
-    <ion-toolbar color="tertiary">
-        <ion-title>Edit Student Record</ion-title>
+    <ion-toolbar>
     </ion-toolbar>
 </ion-header>
 
