--- a/src/app/pages/pruebas/pruebas.page.html
+++ b/src/app/pages/pruebas/pruebas.page.html
@@ -1,20 +1,6 @@
 <ion-app>
     <ion-header>
-        <ion-toolbar color="tertiary">
-            <ion-buttons slot="secondary">
-                <ion-button color="dark">
-                    <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-                </ion-button>
-                <ion-button color="dark">
-                    <ion-icon slot="icon-only" name="search"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-            <ion-buttons slot="primary">
-                <ion-button color="dark" [routerLink]="[ '/login']">
-                    <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-            <ion-title>Usuarios</ion-title>
+        <ion-toolbar>
         </ion-toolbar>
     </ion-header>
 
