--- a/src/app/user-list/user-create/user-create.component.html
+++ b/src/app/user-list/user-create/user-create.component.html
@@ -1,7 +1,6 @@
 <!-- student-edit.page.html -->
 <ion-header>
-    <ion-toolbar color="tertiary">
-        <ion-title>Agregar nuevo cliente</ion-title>
+    <ion-toolbar>
     </ion-toolbar>
 </ion-header>
 
