--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,14 +81,6 @@
         </div>
         <div *ngSwitchCase="'3'">
             <ion-tab-bar slot="bottom">
-                <ion-tab-button tab="user-list">
-                    <ion-label>Usuarios</ion-label>
-                    <ion-icon name="people-outline"></ion-icon>
-                </ion-tab-button>
-                <ion-tab-button tab="company">
-                    <ion-label>Empresas</ion-label>
-                    <ion-icon name="business-outline"></ion-icon>
-                </ion-tab-button>
                 <ion-tab-button tab="pruebas">
                     <ion-label>Pagos</ion-label>
                     <ion-icon name="card-outline"></ion-icon>
@@ -96,6 +88,10 @@
                 <ion-tab-button tab="services">
                     <ion-label>Servicios</ion-label>
                     <ion-icon name="easel-outline"></ion-icon>
+                </ion-tab-button>
+                <ion-tab-button tab="documents/{{this.currentUser['user']['id_user']}}">
+                    <ion-label>documents</ion-label>
+                    <ion-icon name="document-text-outline"></ion-icon>
                 </ion-tab-button>
             </ion-tab-bar>
         </div>
