--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,7 +33,7 @@
                     <ion-label>Pagos</ion-label>
                     <ion-icon name="card-outline"></ion-icon>
                 </ion-tab-button>
-                <ion-tab-button tab="services">
+                <ion-tab-button tab="a-services">
                     <ion-label>Servicios</ion-label>
                     <ion-icon name="easel-outline"></ion-icon>
                 </ion-tab-button>
