--- a/src/app/user-list/user-list.page.html
+++ b/src/app/user-list/user-list.page.html
@@ -3,48 +3,30 @@
     </ion-toolbar>
 </ion-header>
 
+
 <ion-content fullscreen>
-    <ion-grid>
-        <ion-row>
-            <ion-col size="2">
-                <div>Id</div>
-            </ion-col>
-            <ion-col>
-                <div>Nombre</div>
-            </ion-col>
-            <ion-col>
-                <div>Acciones</div>
-            </ion-col>
-        </ion-row>
+    <ion-list>
         <ion-row *ngFor="let user of users">
-            <ion-col size="2">
-                <div style='font-size:90%'>{{ user.id_user }}</div>
-            </ion-col>
             <ion-col>
-                <div>{{ user.first_name }}
-                    <div style='font-size:60%'>{{ user.email }}
-                    </div>
-                </div>
-            </ion-col>
-
-            <ion-col size="5">
-                <ion-button color="warning" size="small" routerLink='/user-update/{{user.id_user}}'>
-                    <ion-icon name="create"></ion-icon>
-                </ion-button>
-                <ion-button color="danger" size="small" (click)="delete(user.id_user)">
-                    <ion-icon name="trash"></ion-icon>
-                </ion-button>
+                <ion-item button routerLink='/user-update/{{user.id_user}}'>
+                    <ion-avatar slot="start">
+                        <img src="http://192.168.137.1:3000/files/{{ user.img }}">
+                    </ion-avatar>
+                    <ion-label>
+                        <h2>{{ user.first_name }}</h2>
+                        <h3>{{ user.last_name }} </h3>
+                        <h3 style="color: grey;">{{user.email}}</h3>
+                    </ion-label>
+                    <ion-button color="danger" size="small" (click)="delete(user.id_user)">
+                        <ion-icon name="trash"></ion-icon>
+                    </ion-button>
+                </ion-item>
             </ion-col>
         </ion-row>
-    </ion-grid>
-
-
-
+    </ion-list>
     <ion-fab horizontal="start" vertical="bottom" slot="fixed" [routerLink]="['/user-create']">
         <ion-fab-button color="success">
             <ion-icon name="add" color="dark"></ion-icon>
         </ion-fab-button>
     </ion-fab>
-
-
 </ion-content>
