--- a/src/app/user-list/user-update/user-update.component.html
+++ b/src/app/user-list/user-update/user-update.component.html
@@ -24,10 +24,10 @@
     <ion-item>
         <ion-input [(ngModel)]="this.data.email" placeholder="Email" disabled inputmode="email"></ion-input>
     </ion-item>
-    <ion-button shape="round" (click)="update()" color="success" size="small">
+    <ion-button (click)="update()" color="success">
         Update
     </ion-button>
-    <ion-button shape="round" [routerLink]="[ '/user-list']" color="danger" size="small">
+    <ion-button [routerLink]="[ '/user-list']" color="danger">
         Cancel
     </ion-button>
 </ion-content>
